Fixed z-index issue with the mini menu

--- a/src/mini-menu/style.scss
+++ b/src/mini-menu/style.scss
@@ -34,12 +34,14 @@
     height: auto;
     opacity: 1;
     transform: translateY(0);
+    z-index: zIndex(100);
 }
 
 @mixin miniMenuIsClosed {
     height: 0;
     opacity: 0;
     transform: translateY(space(300));
+    z-index: 0;
 }
 
 @keyframes miniMenuIsOpen {
@@ -61,6 +63,7 @@
         height: auto;
         opacity: 0;
         transform: translateY(space(300));
+        z-index: zIndex(100);
     }
     100% {
         @include miniMenuIsClosed;
@@ -90,7 +93,6 @@
                     fill-mode: forwards;
                     name: miniMenuIsOpen;
                 }
-                z-index: zIndex(100);
            }
         }
 
